minor fixes, added z-index for context menu

--- a/components/bl-dashlet/styles/index.less
+++ b/components/bl-dashlet/styles/index.less
@@ -5,6 +5,7 @@
 @bl-customComponent-dashlet-context-menu-icon-size: 15px;
 @bl-customComponent-dashlet-context-menu-item-icon-size: 12px;
 @bl-customComponent-dashlet-context-menu-item-background-hover: @themePrimary;
+@bl-customComponent-dashlet-context-menu-z-index: 50;
 
 @bl-customComponent-dashlet-border-padding: 5px;
 @bl-customComponent-dashlet-border-radius: 4px;
@@ -145,6 +146,7 @@
         box-shadow: rgba(255, 255, 255, 0.2) 0 2px 1px -1px, rgba(255, 255, 255, 0.14) 0px 1px 1px 0px, rgba(255, 255, 255, 0.12) 0px 1px 3px 0px;
         border-radius: @bl-customComponent-dashlet-border-radius;
         border: 1px solid @themePrimary;
+        z-index: @bl-customComponent-dashlet-context-menu-z-index;
 
         right: 0;
         left: auto;
